# BSFit

./: README.md  pyproject.toml
src/: bezier.py
src/bsfit/: BSlogging.py  bezier.py  bsfit.py  utils.py
